# (c) Jonathan Hogg 2009
#
# This file is part of SML.
#
# SML is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, using version 3 of the License.
#
# SML is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU Lesser General Public License for more
# details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see http://www.gnu.org/licenses/.
 
AM_CFLAGS = -g
AM_CXXFLAGS = -g -gstabs

SUBDIRS = src interfaces
EXTRA_DIST = doc/userguide.pdf \
				 tests/alm_xi.dat tests/alm_xi.mod \
				 tests/ampl_msnd_test_slck.dat tests/ampl_msnd_test_slck.mod \
				 tests/scopfIEEE_ampl.mod tests/scopfIEEE.dat tests/scopfIEEE.mod \
				 ThirdParty/liboops.a
